<resources>
    <string name="app_name">AstroWeather</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Example settings for Data & Sync ° -->
    <string name="pref_header_data_sync">Location &amp; units</string>

    <string-array name="pref_directions_values">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="favourite_locations">
        <item>łódź</item>
        <item>kraków</item>
        <item>szczebrzeszyn</item>
    </string-array>

    <string name="pref_longitude">Location</string>
    <string name="pref_directions">Units</string>
    <string name="sunrise">Sunrise</string>
    <string name="dawn">Dawn</string>
    <string name="twilight">Twilight</string>
    <string name="sunset">Sunset</string>
    <string name="midnight">00:00</string>
    <string name="zero">0</string>
    <string name="newmoon">New moon</string>
    <string name="defaultDate">01–01–1970</string>
    <string name="fullmoon">Full moon</string>
    <string name="moonphase">Moon phase</string>
    <string name="synodicday">Synodic month day.</string>
    <string name="defaultPercent">0%</string>
    <string name="noughtPointNoughtNought">0.00</string>
    <string name="city">City</string>
    <string name="Description">Description</string>
    <string name="Monday">Mon</string>
    <string name="country">Country</string>
    <string name="temp">Temperature:</string>
    <string name="coords">Coordinates:</string>
    <string name="preassure">Preassure:</string>
    <string name="wind">Wind:</string>
    <string name="humidity">Humidity:</string>
    <string name="visibility">Visibility:</string>
    <string name="About">About</string>

    <string name="title_activity_about">About</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="AboutText">App created for \"Mobile application programming\" laboratiories on Lodz University of Technology by Kamil Stadryniak</string>
    <string name="T">T:</string>
    <string name="P">P:</string>
    <string name="W">W:</string>
    <string name="H">H:</string>
    <string name="V">V:</string>

</resources>
