<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:id="@+id/moonriseIcon"
                android:layout_column="0"
                android:src="@drawable/moonrise"
                android:contentDescription="@string/sunrise"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/moonriseValue"
                android:layout_column="1"
                android:layout_gravity="center_vertical|right"
                android:text="@string/midnight"
                android:textSize="40sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:id="@+id/moonsetIcon"
                android:layout_column="0"
                android:contentDescription="@string/sunset"
                android:src="@drawable/moonset"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/moonsetValue"
                android:layout_column="1"
                android:layout_gravity="center_vertical|right"
                android:text="@string/midnight"
                android:textSize="40sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:id="@+id/newmoonIcon"
                android:layout_column="0"
                android:contentDescription="@string/newmoon"
                android:src="@drawable/new"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/newmoonValue"
                android:layout_column="1"
                android:layout_gravity="center_vertical|right"
                android:text="@string/defaultDate"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:id="@+id/fullmoonIcon"
                android:layout_column="0"
                android:src="@drawable/full"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/fullmoon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/fullmoonValue"
                android:layout_column="1"
                android:layout_gravity="center_vertical|right"
                android:text="@string/defaultDate"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:id="@+id/moonPhaseIcon"
                android:layout_column="0"
                android:src="@drawable/phase"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/moonphase" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/defaultPercent"
                android:id="@+id/moonPhaseValue"
                android:layout_column="1"
                android:textSize="40sp"
                android:layout_gravity="center_vertical|right" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:id="@+id/synodicDayIcon"
                android:layout_column="0"
                android:src="@drawable/month"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/synodicday" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zero"
                android:id="@+id/synodicDayValue"
                android:layout_column="1"
                android:textSize="40sp"
                android:layout_gravity="center_vertical|right" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
