<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/currentIcon"
                android:layout_column="0"
                android:contentDescription="@string/sunrise"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/city"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:textSize="30sp"
                android:textIsSelectable="false"
                android:text="@string/city" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/conditionsDesc"
                android:layout_column="0"
                android:text="@string/Description"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/noughPointNoughNough"
                android:id="@+id/longitude"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/noughPointNoughNough"
                android:id="@+id/latitude"
                android:layout_column="2"
                android:layout_gravity="center_vertical"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/temperature"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"
                android:text="@string/noughPointNoughNough"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/preassure"
                android:layout_column="0"
                android:text="@string/noughPointNoughNough"
                android:textSize="15sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/windSpeed"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"
                android:text="@string/noughPointNoughNough" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/windDirection"
                android:layout_column="2"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"
                android:text="@string/noughPointNoughNough" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/humidity"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"
                android:text="@string/noughPointNoughNough" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/visibility"
                android:layout_column="2"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"
                android:text="@string/noughPointNoughNough" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
